Fix early window crash when parsing options.txt